# OxIDE

./: .gitignore  README.md  overview_prompt.md
final_solution/: Cargo.toml  README.md  Rubrics.md
final_solution/run/: Dockerfile  README.md  run.sh
final_solution/solution/src/: action.rs  app.rs  editor.rs  lua_integration.rs  main.rs  ui.rs
final_solution/tests/: Dockerfile  generate_results.py  mod.rs  run_tests.sh  styles.css  test_interaction.exp
subtask1/: README.md  editor.cabal  hints.md  overview_prompt.md
subtask1/solution/: Dockerfile  cabal.project  docker-compose.yml  editor.cabal
subtask1/solution/app/: Main.hs
subtask1/solution/data/: sample.hs
subtask1/solution/src/Core/: Buffer.hs  Cursor.hs  Types.hs
subtask1/solution/src/UI/: Display.hs  EventHandler.hs  Render.hs  StatusBar.hs  SyntaxHighlight.hs
subtask1/tests/: Dockerfile  docker-compose.yml  generate_results.py  mod.rs  run_tests.sh
subtask1/tests/black_box_tests/: test_cases.sh
subtask1/tests/highlights/: test.lua
subtask1/tests/test_scripts/: process_results.py  run_tests.sh
subtask1/tests/unit_tests/: Spec.hs
subtask2/: hints.md  overview_prompt.md
subtask2/solution/src/: action.rs  app.rs  editor.rs  main.rs  ui.rs
subtask2/solution/src/modes/: command_mode.rs  mod.rs
subtask2/solution/src/syntaxes/: Zig.sublime-syntax
subtask2/solution/src/syntaxes/assets/: packaged-syntaxes.packdump
subtask2/tests/: README.md  mod.rs  run_tests.sh  test_interaction.exp
subtask3/: hints.md  overview_prompt.md
subtask3/solution/lua_scripts/: sample_plugin.lua
subtask3/solution/src/: action.rs  app.rs  main.rs
subtask3/solution/src/modes/: command_mode.rs  mod.rs  normal_mode.rs
subtask3/tests/: Cargo.toml  Dockerfile  docker-compose.yml  mod.rs  results.json  run_tests.sh  test_interaction.exp
subtask4/: Cargo.toml  hints.md  overview_prompt.md  prompt.md
subtask4/solution/src/: app.rs  main.rs  markdown_preview.rs  ui.rs
subtask4/solution/src/modes/: command_mode.rs  insert_mode.rs
subtask4/solution/src/syntaxes/: build.rs
subtask4/tests/: Dockerfile  README.md  generate_results.py  mod.rs  preview.html  results.json  run_tests.sh  test_interaction.exp
subtask4/tests/highlights/: test.zig
