[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
crossterm = "0.22.0"
tokio = { version = "1", features = ["full"] }
syntect = "5.0.0"  # Added for syntax highlighting
mlua = { version = "0.7.4", features = ["lua54", "vendored"] }
pulldown-cmark = "0.9"
warp = "0.3"
askama = { version = "0.12", features = ["serde-json", "markdown"] }
open = "3.0"


[dev-dependencies]
expectrl = "0.4"

#[package.metadata.askama]
#template_dir = "solution/templates"

[[bin]]
name = "terminal"
path = "solution/src/main.rs"