cabal-version:       2.4
name:                editor
version:             0.1.0.0
build-type:          Simple

executable editor
  main-is:             Main.hs
  hs-source-dirs:      app, src
  build-depends:
    base >=4.14 && <5,
    vty >=5.35,
    vty-windows >=0.2,
    text >=1.2,
    filepath >=1.4,
    containers >=0.6
  default-language:    Haskell2010
  cpp-options:         -DPLATFORM_SPECIFIC_VTY
  ghc-options:         -threaded
  other-modules:
    Core.Buffer,
    Core.Types,
    Core.Cursor,
    UI.Display,
    UI.Render,
    UI.StatusBar,
    UI.SyntaxHighlight,
    UI.EventHandler

library
  exposed-modules:     
    Core.Types,
    Core.Buffer,
    Core.Cursor
  hs-source-dirs:      src
  build-depends:
    base >=4.14 && <5,
    text >=1.2,
    filepath >=1.4,
    containers >=0.6
  default-language:    Haskell2010

test-suite editor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests/unit_tests, src
  main-is:             Spec.hs
  build-depends:
    base >=4.14 && <5,
    hspec >=2.7,
    QuickCheck >=2.13,
    text >=1.2,
    filepath >=1.4,
    containers >=0.6
  default-language:    Haskell2010
  other-modules:
    Core.Buffer,
    Core.Types,
    Core.Cursor,       
    UI.Display,
    UI.Render,
    UI.StatusBar,
    UI.SyntaxHighlight,
    UI.EventHandler
