[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
crossterm = "0.22.0"
tokio = { version = "1", features = ["full"] }
syntect = "5.0.0"  # Added for syntax highlighting
mlua = { version = "0.7.4", features = ["lua54", "vendored"] }

[[bin]]
name = "terminal"
path = "solution/src/main.rs"